--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>DISA Framework Example</title>
+    <title>IAV Frontend Framework Example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
