docs: add title to playground.html

--- a/packages/frontend-framework/docs-version/playground.html
+++ b/packages/frontend-framework/docs-version/playground.html
@@ -27,13 +27,15 @@
     <link href="./pages/styles/pages.css" rel="stylesheet"/>
 </head>
 <body>
-<h3 id="cloning-the-repository">Cloning the Repository</h3>
+<h1 id="playground">Playground</h1>
+
+<h2 id="cloning-the-repository">Cloning the Repository</h2>
 <p class="cell">
     If you want to play with the framework and the contained example project,
     you have to clone the framework&#39;s Git repository first.
 </p>
 
-<h3 id="the-example-project">The Example Project</h3>
+<h2 id="the-example-project">The Example Project</h2>
 <p class="cell">
     As mentioned, the repository contains the framework and an example
     project. As the framework isn&#39;t a UI by itself, you cannot see the
@@ -52,9 +54,9 @@
     the environment and start the development server at port 3000.
 </p>
 
-<h3 id="making-real-time-changes-to-the-framework">
+<h2 id="making-real-time-changes-to-the-framework">
     Making Real-Time Changes to the Framework
-</h3>
+</h2>
 <p class="cell">
     If you want to make changes to the framework and see the consequences of
     these changes in real time you have to execute the following steps by
