--- a/packages/frontend-framework/docs-package/index.html
+++ b/packages/frontend-framework/docs-package/index.html
@@ -16,15 +16,15 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Quick Overview</title>
     <script src="./pages.js" type="application/javascript"></script>
-</head>
-<body>
-<div id="page"></div>
-</body>
+  </head>
+  <body>
+    <div id="page"></div>
+  </body>
 </html>
