--- a/packages/frontend-framework/docs-version/pages/html/header.html
+++ b/packages/frontend-framework/docs-version/pages/html/header.html
@@ -16,31 +16,36 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-<head>
-    <link href="../styles/styles.css" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <link href="../styles/styles.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Header</title>
-</head>
-<body>
-<header class="main-header">
-    <div class="header-content">
-        <a href="https://github.com/iavofficial/IAVFrontendFramework" target="_blank">
-            <img alt="GitHub" height="32"
-                 src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
-                 width="32">
+  </head>
+  <body>
+    <header class="main-header">
+      <div class="header-content">
+        <a
+          href="https://github.com/iavofficial/IAVFrontendFramework"
+          target="_blank"
+        >
+          <img
+            alt="GitHub"
+            height="32"
+            src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+            width="32"
+          />
         </a>
         <span class="header-title">IAV Frontend Framework</span>
         <div class="version-dropdown">
-            <label>
-                <select class="header-version" id="versionDropdown">
-                </select>
-            </label>
+          <label>
+            <select class="header-version" id="versionDropdown"></select>
+          </label>
         </div>
         <div id="versionBanner"></div>
-    </div>
-</header>
-</body>
+      </div>
+    </header>
+  </body>
 </html>
