--- a/packages/frontend-framework/docs-version/pages/html/imprint-footer.html
+++ b/packages/frontend-framework/docs-version/pages/html/imprint-footer.html
@@ -16,17 +16,17 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-<head>
-    <link href="../styles/styles.css" rel="stylesheet">
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <link href="../styles/styles.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Footer Example</title>
-</head>
-<body>
-<footer class="main-footer">
-    <a class="footer-link" href="./pages/html/imprint.html">Imprint</a>
-</footer>
-</body>
+  </head>
+  <body>
+    <footer class="main-footer">
+      <a class="footer-link" href="./pages/html/imprint.html">Imprint</a>
+    </footer>
+  </body>
 </html>
