--- a/packages/frontend-framework/docs-version/pages/html/page-nav.html
+++ b/packages/frontend-framework/docs-version/pages/html/page-nav.html
@@ -16,18 +16,18 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>On this Page</title>
-    <link href="../styles/styles.css" rel="stylesheet">
-</head>
-<body>
-<div class="page-nav" id="page-nav">
-    <h3>On this Page</h3>
-    <ul id="nav-list"></ul>
-</div>
-</body>
+    <link href="../styles/styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="page-nav" id="page-nav">
+      <h3>On this Page</h3>
+      <ul id="nav-list"></ul>
+    </div>
+  </body>
 </html>
