--- a/packages/frontend-framework/docs-version/pages/html/nav.html
+++ b/packages/frontend-framework/docs-version/pages/html/nav.html
@@ -16,32 +16,48 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Meine Website</title>
-    <link href="../styles/styles.css" rel="stylesheet">
-</head>
-<body>
-<div class="drawer" id="drawer">
-    <ul>
+    <link href="../styles/styles.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div class="drawer" id="drawer">
+      <ul>
         <li><a onclick="navigate('overview.html')">Quick Overview</a></li>
-        <li><a onclick="navigate('information.html')">01 - Important Information</a></li>
-        <li><a onclick="navigate('installation-guide.html')">02 - Installation</a></li>
+        <li>
+          <a onclick="navigate('information.html')"
+            >01 - Important Information</a
+          >
+        </li>
+        <li>
+          <a onclick="navigate('installation-guide.html')">02 - Installation</a>
+        </li>
         <li><a onclick="navigate('interface.html')">03 - Interface</a></li>
-        <li><a onclick="navigate('globaldatalayer.html')">04 - GlobalDataLayer</a></li>
+        <li>
+          <a onclick="navigate('globaldatalayer.html')">04 - GlobalDataLayer</a>
+        </li>
         <li><a onclick="navigate('uilayer.html')">05 - UILayer</a></li>
-        <li><a onclick="navigate('content-area.html')">07 - Content Area</a></li>
-        <li><a onclick="navigate('color-settings-and-dark-mode.html')">08 - Color Settings and Dark Mode</a></li>
-        <li><a onclick="navigate('example-project.html')">09 - Example Project</a></li>
+        <li>
+          <a onclick="navigate('content-area.html')">07 - Content Area</a>
+        </li>
+        <li>
+          <a onclick="navigate('color-settings-and-dark-mode.html')"
+            >08 - Color Settings and Dark Mode</a
+          >
+        </li>
+        <li>
+          <a onclick="navigate('example-project.html')">09 - Example Project</a>
+        </li>
         <li><a onclick="navigate('playground.html')">10 - Playground</a></li>
-    </ul>
-    <h3>Need help?</h3>
-    <ul>
+      </ul>
+      <h3>Need help?</h3>
+      <ul>
         <li><a onclick="navigate('faq.html')">FAQ</a></li>
-    </ul>
-</div>
-</body>
+      </ul>
+    </div>
+  </body>
 </html>
