--- a/1.3.0/index.html
+++ b/1.3.0/index.html
@@ -16,24 +16,17 @@
  SPDX-License-Identifier: Apache-2.0
 -->
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Quick Overview</title>
-    <script src="./pages/script/nav.js" type="application/javascript"></script>
-    <link href="./pages/styles/styles.css" rel="stylesheet" />
-    <link href="./pages/styles/pages.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div class="page-container">
-      <nav id="nav-placeholder"></nav>
-      <nav id="page-placeholder"></nav>
-      <div id="header-container"></div>
-      <div id="container"></div>
-      <div id="footer-container"></div>
-    </div>
-    <script></script>
-  </body>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Weiterleitung</title>
+    <script>
+        window.location.href = "../../index.html";
+    </script>
+</head>
+<body>
+<p>Falls die Weiterleitung nicht automatisch funktioniert, <a href="../../index.html">hier klicken</a>.</p>
+</body>
 </html>
