docs: add redirect from older versions to correct index.html

--- a/1.3.0/color-settings-and-dark-mode.html
+++ b/1.3.0/color-settings-and-dark-mode.html
@@ -23,10 +23,10 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Weiterleitung</title>
     <script>
-        window.location.href = "../../index.html";
+        window.location.href = "../index.html";
     </script>
 </head>
 <body>
-<p>Falls die Weiterleitung nicht automatisch funktioniert, <a href="../../index.html">hier klicken</a>.</p>
+<p>Falls die Weiterleitung nicht automatisch funktioniert, <a href="../index.html">hier klicken</a>.</p>
 </body>
 </html>
