--- a/1.3.0/color-settings-and-dark-mode.html
+++ b/1.3.0/color-settings-and-dark-mode.html
@@ -17,16 +17,16 @@
 -->
 
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Weiterleitung</title>
+    <title>Redirecting</title>
     <script>
         window.location.href = "../index.html";
     </script>
 </head>
 <body>
-<p>Falls die Weiterleitung nicht automatisch funktioniert, <a href="../index.html">hier klicken</a>.</p>
+<p>If the redirection does not happen automatically, <a href="../index.html">click here</a>.</p>
 </body>
 </html>
