--- a/1.1.0/faq.html
+++ b/1.1.0/faq.html
@@ -21,30 +21,12 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Main Components</title>
-    <script src="./pages/script/nav.js" type="application/javascript"></script>
-    <link href="./pages/styles/styles.css" rel="stylesheet">
-    <link href="./pages/styles/pages.css" rel="stylesheet">
+    <title>Redirecting</title>
+    <script>
+        window.location.href = "../index.html";
+    </script>
 </head>
 <body>
-<h1 id="faq">FAQ</h1>
-<p class="cell">
-    This page lists common questions and problems and links corresponding issues.
-</p>
-
-<h2 id="problems-using-the-svg-format-as-react-component-with-vite">Problems using the SVG format as React Component
-    with Vite</h2>
-<p class="cell">
-    In a few scenarios, the framework requires the use of SVG Files (e.g., Icons). To be able to set the color of
-    the SVG inside the Framework, the Icons must be imported as React Components.
-</p>
-<p class="cell">
-    Use the following steps to solve issues regarding the SVG import as React Components:
-</p>
-<p class="cell">
-    Install the vite-plugin-svgr with the command "npm i vite-plugin-svgr" and configure it as shown <a
-        href="https://www.npmjs.com/package/vite-plugin-svgr">here</a>. If this doesn’t help, further possible
-    solutions can be found <a href="https://stackoverflow.com/questions/74720726/type-definition-for-vite-plugin-svgr">here</a>.
-</p>
+<p>If the redirection does not happen automatically, <a href="../index.html">click here</a>.</p>
 </body>
 </html>
