--- a/1.1.0/index.html
+++ b/1.1.0/index.html
@@ -21,21 +21,12 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Quick Overview</title>
-    <script src="./pages/script/nav.js" type="application/javascript"></script>
-    <link href="./pages/styles/styles.css" rel="stylesheet">
-    <link href="./pages/styles/pages.css" rel="stylesheet">
+    <title>Redirecting</title>
+    <script>
+        window.location.href = "../index.html";
+    </script>
 </head>
 <body>
-<div class="page-container">
-    <nav id="nav-placeholder"></nav>
-    <nav id="page-placeholder"></nav>
-    <div id="header-container"></div>
-    <div id="container"></div>
-    <div id="footer-container"></div>
-</div>
-<script>
-
-</script>
+<p>If the redirection does not happen automatically, <a href="../index.html">click here</a>.</p>
 </body>
 </html>
