--- a/packages/frontend-framework/docs-version/globaldatalayer.html
+++ b/packages/frontend-framework/docs-version/globaldatalayer.html
@@ -152,8 +152,8 @@ Key for the german dialect in Switzerland: "de_CH"
 </code></pre>
     <p class="cell">
       To get a translation by it&#39;s key you should use the useTranslator hook
-      from .../iav-core/translators. This hook returns a function
-      which generates the translation by passing the corresponding key. The hook
+      from .../iav-core/translators. This hook returns a function which
+      generates the translation by passing the corresponding key. The hook
       returns a function in order to allow the user to translate text inside the
       whole component. If the hook itself generated the translation it would
       make things more complicated as hook calls have to be executed in the same
